err/ownpaste.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_SQLAlchemy-2.3.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Script-2.0.6.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/Tempita-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_script'...
Listing './lib/python3.5/site-packages/flask_sqlalchemy'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/migrate'...
Listing './lib/python3.5/site-packages/migrate/changeset'...
Listing './lib/python3.5/site-packages/migrate/changeset/databases'...
Listing './lib/python3.5/site-packages/migrate/tests'...
Listing './lib/python3.5/site-packages/migrate/tests/changeset'...
Listing './lib/python3.5/site-packages/migrate/tests/changeset/databases'...
Listing './lib/python3.5/site-packages/migrate/tests/fixture'...
Listing './lib/python3.5/site-packages/migrate/tests/integrated'...
Listing './lib/python3.5/site-packages/migrate/tests/versioning'...
Listing './lib/python3.5/site-packages/migrate/versioning'...
Listing './lib/python3.5/site-packages/migrate/versioning/script'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/manage'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/repository'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/repository/default'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/repository/default/versions'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/repository/pylons'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/repository/pylons/versions'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/script'...
Listing './lib/python3.5/site-packages/migrate/versioning/templates/sql_script'...
Listing './lib/python3.5/site-packages/migrate/versioning/util'...
Listing './lib/python3.5/site-packages/ownpaste'...
Compiling './lib/python3.5/site-packages/ownpaste/__init__.py'...
***   File "./lib/python3.5/site-packages/ownpaste/__init__.py", line 90
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ownpaste/migrations'...
Listing './lib/python3.5/site-packages/ownpaste/migrations/versions'...
Compiling './lib/python3.5/site-packages/ownpaste/script.py'...
***   File "./lib/python3.5/site-packages/ownpaste/script.py", line 34
    print 'Add this to your configuration file:'
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ownpaste/static'...
Listing './lib/python3.5/site-packages/ownpaste/templates'...
Listing './lib/python3.5/site-packages/ownpaste-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/sqlalchemy_migrate-0.11.0.egg-info'...
Listing './lib/python3.5/site-packages/sqlparse'...
Listing './lib/python3.5/site-packages/sqlparse/engine'...
Listing './lib/python3.5/site-packages/sqlparse/filters'...
Listing './lib/python3.5/site-packages/sqlparse-0.2.4.dist-info'...
Listing './lib/python3.5/site-packages/tempita'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
